--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -9,6 +9,7 @@
         <div>
           <p class="mb-0"><%= micropost.content %></p>
         </div>
+        <%= render "favolites/favolites_button", mpost: micropost %>
         <div>
           <% if current_user == micropost.user %>
             <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
