--- a/app/views/favolites/_favorites.html.erb
+++ b/app/views/favolites/_favorites.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-unstyled">
-  <% microposts.each do |micropost| %>
+  <% micropost.each do |micropost| %>
     <li class="media mb-3">
       <img class="mr-2 rounded" src="<%= gravatar_url(micropost.user, { size: 50 }) %>" alt="">
       <div class="media-body">
@@ -10,9 +10,11 @@
           <p class="mb-0"><%= micropost.content %></p>
         </div>
         <%= render "favolites/favolites_button", mpost: micropost %>
+        <div>
           <% if current_user == micropost.user %>
-            <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm　display-inline' %>
+            <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
           <% end %>
+        </div>
       </div>
     </li>
   <% end %>
