--- a/app/views/users/fav_posts.erb
+++ b/app/views/users/fav_posts.erb
@@ -17,6 +17,6 @@
       <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers  <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
       <li class="nav-item"><a href="<%= fav_posts_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(fav_posts_user_path(@user)) %>">Favorite <span class="badge badge-secondary"><%= @count_favolitings %></span></a></li>
     </ul>
-    <%= render 'users', users: @followers %>
+    <%= render 'fpost', microposts: @fav_posts %>
   </div>
 </div>
